--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   cloud:
     config:
       enabled: true
-      uri: http://localhost:8090
+      uri: http://192.168.1.3:8090
 
 resilience4j:
   circuitbreaker:
